[package]
name = "ecape-rs"
version = "0.1.0"
edition = "2024"
description = "Rust ECAPE parcel calculations with parity-verified behavior against ecape-js"
license = "MIT"
repository = "https://github.com/FahrenheitResearch/ecape-rs"
readme = "README.md"

[lib]
name = "ecape_rs"
path = "src/lib.rs"

[[bin]]
name = "run_case"
path = "src/bin/run_case.rs"

[[bin]]
name = "run_case_raw"
path = "src/bin/run_case_raw.rs"

[dependencies]
metrust = { git = "https://github.com/FahrenheitResearch/metrust-py.git", package = "metrust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
